Change: Applied a fix to help keep large images from overlapping on Armadillo detail page

--- a/application/views/inventory/armadillo/dealertrend-inventory-api.css
+++ b/application/views/inventory/armadillo/dealertrend-inventory-api.css
@@ -141,11 +141,23 @@
 #armadillo-detail .armadillo-icons { float:left; width:280px; text-align:left; padding:10px; }
 
 #armadillo-detail .armadillo-slideshow { width:300px; }
-#armadillo-detail .armadillo-slideshow .armadillo-images { height:240px; }
-#armadillo-detail .armadillo-slideshow .armadillo-images > img { width:300px !important; height:auto !important; margin-left:10px; clear:both; }
+#armadillo-detail .armadillo-slideshow .armadillo-images {
+	height:240px;
+	overflow: hidden;
+}
+#armadillo-detail .armadillo-slideshow .armadillo-images img {
+	width: 300px !important;
+	height: 225px;
+	clear:both;
+}
 #armadillo-detail .armadillo-slideshow img { background:transparent url('images/no-image-376x260.jpg') no-repeat center;  }
 #armadillo-detail .armadillo-slideshow .armadillo-navigation { display:block; margin:5px auto 0 auto; width:300px; height:auto !important; text-align:center;  clear:both !important; }
-#armadillo-detail .armadillo-slideshow .armadillo-navigation a img { border:3px solid white; background:white url('images/thumb-error-26x16.png') no-repeat 25px center; height:auto; width:60px; }
+#armadillo-detail .armadillo-slideshow .armadillo-navigation a img {
+	border:3px solid white;
+	background:white url('images/thumb-error-26x16.png') no-repeat 25px center;
+	height:50px;
+	width:60px;
+}
 #armadillo-detail .armadillo-slideshow .armadillo-navigation a img:hover { border:3px solid #9f0300; }
 #armadillo-detail .armadillo-slideshow .armadillo-navigation a.activeSlide img { border-color:#55CCe6; }
 #armadillo-detail .armadillo-slideshow .armadillo-navigation a.activeSlide img:hover { border-color:#9f0300; }
